# gxpdf-reader

./: Cargo.toml  README.md  README_CN.md  icons.toml
data/: icons.gresource.xml
locales/: en.json  zh.json
src/: lib.rs  main.rs  style.css
src/components/: app.rs  gx_window.rs  mod.rs
src/gxdocument/: gx_document.rs  gx_document_info.rs  gx_mapping_list.rs  gx_pdf_document.rs  gx_render_context.rs  mod.rs
src/gxview/: gx_document_model.rs  gx_page_cache.rs  gx_pixbuf_cache.rs  gx_surfaces_cache.rs  gx_view.rs  mod.rs
src/gxview/gx_view_area/: imp.rs  mod.rs
src/gxview/gx_view_page/: imp.rs  mod.rs
src/utils/: gx_job_scheduler.rs  gx_jobs.rs  gx_pdfium.rs  mod.rs
