[package]
name = "gxpdf-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
backtrace = "0.3.75"
bitflags = "2.9.0"
gtk = { version = "0.9.4", package = "gtk4" }
relm4 = "0.9.1"
pango = "0.20.9"
pdfium-render = { git = "https://github.com/gxpdf/pdfium-render-for-reader.git",branch = "main",features = ["sync"]}
relm4-icons = "0.9.0"
rust-i18n = "3.1.2"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tree_iterators_rs = "2.0.0"
uuid = {version = "1.16.0",features = ["v4"]}

[build-dependencies]
glib-build-tools = "0.20.0"

